# customer-service-backend-ai

./: README.md
edu-data/: .env  Makefile  README.md  init_db.py  pyproject.toml
edu-data/app/: __init__.py  config.py  database.py  dependencies.py  errors.py  main.py  response.py  utils.py
edu-data/app/routers/: cart.py  consultations.py  coupons.py  courses.py  enrollments.py  favorites.py  interactions.py  orders.py  payments.py  (+3 more)
edu-data/docker/: docker-compose.yaml
edu-data/generate/: __init__.py  config.py  db.py  insert_support.py  main.py  progress.py
edu-data/seeds/: _insert_question_bank_and_question.sql  _insert_series_and_category_rel.sql  _insert_series_cohort_and_modules.sql  _load_check_stg_question.sql  _load_check_stg_question_bank.sql  _load_check_stg_series.sql  _load_check_stg_series_course.sql  _load_stg_question.sql  _load_stg_question_bank.sql  _seed_min_users_for_series.sql  import_seeds_wsl.sh
edu-data/sql/: edu.sql
edu-data/tests/: conftest.py  test_conversion.py  test_learning_and_interactions.py  test_orders_and_payments.py  test_tickets.py  test_users_and_courses.py
edu-service-backend/: .env.example  main.py  pyproject.toml
edu-service-backend-business/: .env.example  README.md  main.py  pyproject.toml
edu-service-backend-business/app/: api.py  app.py  config.py  database.py  models.py  schemas.py
edu-service-backend-business/scripts/: route_smoke.py
edu-service-backend/flow_config/: user_flows.yml
edu-service-backend/scripts/: business_smoke.py  chat_smoke.py  db_check_dialogue_state.py  db_smoke.py  route_smoke.py
(+80 files in other folders)
