[project]
dependencies = [
  "asyncmy>=0.2.11",
  "fastapi>=0.115.0",
  "httpx>=0.28.1",
  "loguru>=0.7.3",
  "pydantic>=2.12.5",
  "pymysql>=1.1.2",
  "pytest>=8.4.1",
  "python-dotenv>=1.1.1",
  "rich>=14.2.0",
  "sqlacodegen>=4.0.3",
  "sqlalchemy>=2.0.49",
  "uvicorn>=0.34.0",
]
description = "Add your description here"
name = "edu-data"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"
