[project]
name = "edu-service-backend-business"
version = "0.1.0"
description = "Education business service for edu customer-service demo."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "sqlalchemy>=2.0.38",
    "pymysql>=1.1.1",
    "cryptography>=46.0.7",
]

[tool.uv]
package = false

