[project]
name = "edu-service-backend"
version = "0.1.0"
description = "Education intelligent customer service backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.1",
    "sqlalchemy>=2.0.41",
    "aiomysql>=0.3.2",
    "aiosqlite>=0.22.1",
    "greenlet>=3.4.0",
    "pyyaml>=6.0.3",
    "jinja2>=3.1.6",
    "langchain>=1.2.15",
    "langchain-openai>=1.0.1",
]

[tool.uvicorn]
factory = false

